# asteroids

./: CMakeLists.txt  Makefile  README.md  array.h  asteroid.c  asteroid.cpp  asteroid.h  asteroid.hpp  collision_area.c  collision_area.h  game.c  game.cpp  game.h  gameObject.cpp  gameObject.h  gameObject.hpp  main.c  number.hpp  player.c  player.cpp  player.h  player.hpp  projectile.cpp  projectile.hpp  random.h  resolution.c  resolution.h  text.hpp  timer.c  timer.cpp  timer.h  timer.hpp
src/: array.c  array.h  asteroid.c  asteroid.h  common.c  common.h  enemy.c  enemy.h  game.c  player.c  player.h  projectile.c  projectile.h  random.cpp  text.cpp  text.h  texture_pro.c  texture_pro.h  timer.c  timer.h
